--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^4.3.0",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-accessibilityjs": "^1.0.3",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.4.0",
